examples/test/testpolicy9579.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9579
  namespace: namespace111
spec:
  podSelector:
    matchLabels:
      key4: value2
      key16: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value43
          key13: value34
      podSelector:
        matchLabels:
          key20: value37
          key12: value22
